# rudn-graph-algorithms-yew

./: Cargo.toml  README.md  cola.js  index.html
src/: graph_controller.js  graph_settings.rs  graph_settings_bus.rs  graph_view.rs  main.rs  style.json  test.html  views.rs
src/views/: column_view.rs  graph_settings.rs  graph_view.rs  navbar.rs  not_found.rs
