[package]
name = "rudn-graph-algorithms-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
js-sys = "0.3.60"
# you can check the latest version here: https://crates.io/crates/yew
yew = "0.19"
seed = "0.9.2"
wasm-logger = "0.2.0"
log = "0.4.17"
yew-agent = "0.1.0"
serde = "1.0.145"
yew-router = "0.16.0"
lazy_static = "1.4.0"
wasm_mutex = "0.1.4"
mut_static = "5.0.0"